# magnetic-navigation

bag2mat-bag2matpy/config/: bag2matpy_config.yaml
magnetic_field_localization-master/: CMakeLists.txt  package.xml
magnetic_field_localization-master/launch/: TODO_localization.launch  borongaj_localization.launch  borongaj_two_vectors_sim.launch  localization.launch  localization_lpms.launch  localization_sim.launch  localization_sim_lpms.launch  one_vectors_lpms.launch  three_vectors.launch  three_vectors_lpms.launch  three_vectors_sim (copy).launch  two_vectors.launch  two_vectors_lpms.launch  two_vectors_sim.launch  two_vectors_sim_lpms.launch
magnetic_field_localization-master/src/: asa047.cpp  magnetic_field_localization.cpp  magnetic_field_localization_bor.cpp  magnetic_field_localization_two_wire.cpp  magnetic_field_vector.cpp  magnetic_field_vector_bor.cpp  magnetic_field_vector_fast.cpp
magnetic_sensors_arduino-master/: CMakeLists.txt  package.xml
magnetic_sensors_arduino-master/src/: magnetic_sensors_arduino.cpp
mav_comm/mav_msgs/include/mav_msgs/: default_topics.h
mmuav_gazebo/mmuav_control/launch/: rotors_variation_attitude_position_control.launch  test_launch.launch
mmuav_gazebo/mmuav_control/src/: odometry_filter.py  position_ctl.py  rotors_variation_attitude_control.py  rotors_variation_controller_outputs_to_motor_velocities.py  trajectory_to_trajectory_point.py
mmuav_gazebo/mmuav_description/launch/: spawn_uav.launch
mmuav_gazebo/mmuav_gazebo/launch/: TODO_attitude.launch  main_2.launch  main_test_launch.launch  mmuav.launch  uav_attitude_position.launch  uav_trajectory.launch  vpc_ttcuav_attitude_position.launch
orientation/: CMakeLists.txt  README.md  package.xml
orientation/launch/: orientation_test.launch
orientation/src/: orientation.cpp
power_line_simulation/: CMakeLists.txt  README.md  package.xml
power_line_simulation/config/: model.config  model.sdf
power_line_simulation/launch/: TODO_Powerline_Two_Wires.launch  TODO_Powerline_Two_Wires.launch.save  borongaj_powerline.launch  powerline_UAV_borongaj.launch  powerline_gazebo.launch  powerline_one_wire.launch  powerline_one_wire_two_mag.launch  powerline_sim.launch  powerline_sim_two_wires.launch  powerline_test.launch  powerline_trajectory_test.launch  trajektorija_test.launch
power_line_simulation/src/: power_line_simulation.cpp
power_line_simulation/urdf/: powerline.urdf.xacro  stand.urdf.xacro
rosbag_sub_pub/: CMakeLists.txt  README.md  package.xml
rosbag_sub_pub/launch/: rosbag_test.launch
rosbag_sub_pub/src/: record_bag.sh  rosbag_sub_pub.cpp
rotors_simulator/rotors_description/urdf/: component_snippets.xacro  mav_generic_odometry_sensor.gazebo
rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
rotors_simulator/rotors_gazebo_plugins/include/rotors_gazebo_plugins/: common.h  gazebo_imu_plugin.h  gazebo_magnetometer_plugin.h  gazebo_mavlink_interface.h  gazebo_motor_model.h  gazebo_octomap_plugin.h  gazebo_odometry_plugin.h  gazebo_wind_plugin.h
rotors_simulator/rotors_gazebo_plugins/src/: gazebo_bag_plugin.cpp  gazebo_controller_interface.cpp  gazebo_gps_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_octomap_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_wind_plugin.cpp
simple_trajectory/: CMakeLists.txt  package.xml
simple_trajectory/src/: attitude_test.py  borongaj_magnetic_field_vector.cpp  find_line.py  follow_reference.py  new_find_and_follow.py  new_position_mode.py  noise_points.py  old_find_and_follow.py  plot_data.py  position_2.py  simple_trajectory.cpp  simple_trajectory_py.py  temp_traj.py  two_lines.py
