<?xml version="1.0"?>
<package>
  <name>magnetic_sensors_arduino</name>
  <version>0.0.0</version>
  <description>Driver reading magnetic sensor readings from arduino</description>

  <author email="goran.vasiljevic@fer.hr">Goran Vasiljevic</author>

  <maintainer email="goran.vasiljevic@fer.hr">Goran Vasiljevic</maintainer>

  <license>BSD</license>

 <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
