<?xml version="1.0"?>
<package>
  <name>power_line_simulation</name>
  <version>0.0.0</version>
  <description>Localization based on the magnetic field strength</description>

  <author email="goran.vasiljevic@fer.hr">Goran Vasiljevic</author>

  <maintainer email="goran.vasiljevic@fer.hr">Goran Vasiljevic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
