<?xml version="1.0"?>
<package>
  <name>simple_trajectory</name>
  <version>0.0.0</version>
  <description>simple trajectory</description>

  <author email="goran.vasiljevic@fer.hr">Goran Vasiljevic</author>

  <maintainer email="goran.vasiljevic@fer.hr">Goran Vasiljevic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
